--- a/sup user/user.html
+++ b/sup user/user.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/user.css" />
+    <link rel="stylesheet" href="user.css" />
     <title>Document</title>
   </head>
   <body>
@@ -60,6 +60,6 @@
     </div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="js/user.js"></script>
+    <script src="user.js"></script>
   </body>
 </html>
