--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
   <div class="container">
     <!-- 注册框 -->
     <div class="container-form container-signup">
-      <form action="#" class="form" id="form1">
+      <form action="./user.html" class="form" id="form1">
         <h2 class="form-title">注册账号</h2>
         <input type="text" placeholder="User" class="input" />
         <input type="Email" placeholder="Email" class="input" />
@@ -25,7 +25,7 @@
     
     <!-- 登录框 -->
     <div class="container-form container-signin">
-      <form action="user.html" class="form" id="form2">
+      <form action="./user.html" class="form" id="form2">
         <h2 class="form-title">欢迎登录</h2>
         <input type="email" placeholder="Email" class="input" />
         <input type="password" placeholder="Password" class="input">
