--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
         <input type="Email" placeholder="Email" class="input" />
         <input type="password" placeholder="Password" class="input" />
 
-        <button type="button" class="btn">点击注册</button>
+        <a href="./user.html" class="btn">注册</a>
       </form>
     </div>
     
@@ -31,7 +31,7 @@
         <input type="password" placeholder="Password" class="input">
         <a href="#" class="link">忘记密码</a>
 
-        <button type="button" class="btn">登录</button>
+        <a href="./user.html" class="btn">登录</a>
       </form>
     </div>
     <!-- 叠加层部分 -->
